post data does not have to be query string

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
                                			console.log("I did it");
                         		}            
 		   		});
+				document.getElementById("command").value = "";
         		}
 		
 
